--- a/package.json
+++ b/package.json
@@ -1,28 +1,65 @@
 {
   "name": "composite-ui",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "classnames": "^2.2.5",
-    "lin3s-front-foundation": "^0.18.7",
-    "material-ui": "^1.0.0-beta.38",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "prop-types": "^15.6.1",
+    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "classnames": "^2.2.6",
+    "css-vars-ponyfill": "^1.9.0",
+    "dompurify": "^1.0.7",
+    "express": "^4.16.2",
+    "express-redirect": "^1.2.2",
+    "formik": "^1.1.1",
+    "ignore-styles": "^5.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lin3s-react-analytics": "^0.0.1",
+    "lodash.throttle": "^4.1.1",
+    "moment": "^2.22.2",
+    "objectFitPolyfill": "^2.1.1",
+    "p-cancelable": "^0.5.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-cookie-banner": "^4.0.0",
     "react-dom": "^16.2.0",
-    "react-facebook-login": "^4.0.1",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.1"
+    "react-helmet": "^5.2.0",
+    "react-id-swiper": "^1.6.6",
+    "react-onclickoutside": "^6.7.1",
+    "react-redux": "^5.0.6",
+    "react-responsive-redux": "^0.6.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-dom": "^4.2.2",
+    "react-router-named-routes": "^0.0.20",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "react-scripts": "^1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "wpapi": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "NODE_ENV=development react-app-rewired start",
+    "build": "NODE_ENV=production react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
+    "serve": "NODE_ENV=development node_modules/.bin/nodemon server/index.js",
+    "deploy": "NODE_ENV=production node server/index.js",
+    "fixer-js": "node_modules/.bin/prettier 'server/**/*.js' 'src/**/*.js' --write --single-quote --no-bracket-spacing --trailing-comma all",
+    "fixer-css": "node_modules/.bin/stylelint -c .stylelintrc.js src/**/*.css --fix",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build"
   },
   "devDependencies": {
-    "react-styleguidist": "^6.5.2"
+    "fs": "^0.0.1-security",
+    "jsdom": "^12.0.0",
+    "nodemon": "^1.14.11",
+    "path": "^0.12.7",
+    "prettier": "^1.10.2",
+    "react-app-rewire-babel-loader": "^0.1.1",
+    "react-app-rewire-eslint": "^0.2.3",
+    "react-app-rewire-stylelint": "^0.1.1",
+    "react-app-rewired": "^1.4.1",
+    "stylelint": "^9.0.0",
+    "stylelint-order": "^0.8.0",
+    "stylelint-selector-bem-pattern": "^2.0.0",
+    "stylelint-webpack-plugin": "^0.10.2"
   }
 }
